Modificaciones desde Windows

--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -12,6 +12,11 @@
         para mostrarle al mundo los futuros proyectos que hago</p>
     
     <h2>11/07/2025</h2>
-    <p>Estoy por finalizar la base de la pagina web, y ahora si subirla a produccion</p>
+    <p>Estoy por finalizar la base de la pagina web, y poder subirla a github</p>
+    <h2>14/07/2025</h2>
+    <p>Porfin pude hacer un git pull desde mi entorno virtual, y vajar cambios, ahora
+        subire cambios desde mi computadora principal y vajar esos cambios en mi entorno virtual con otra cuenta
+        de github
+    </p>
 {% endblock %}
         
