--- a/blog/templates/blog/sobre_mi.html
+++ b/blog/templates/blog/sobre_mi.html
@@ -13,7 +13,7 @@
         la universidad tecnologica de morelia. 
     </p>    
     <p>
-        Escoji la carrera te TICS por mi pasion a las computadoras y al mudo de TI.
+        Escogi la carrera te TICS por mi pasion a las computadoras y al mudo de TI.
     </p>
     <p>
         Muchas gracias por visitar mi blog.
